refactor(search): use immutable structure to store tags and request database