@@ -226,7 +226,7 @@ public class ItemBusinessTest {
     public void should_find_by_tags_and_full_text_without_specific_order() {
         /* Given */
         String term = "Foo";
-        List<Tag> tags = Arrays.asList(new Tag().setName("Discovery"), new Tag().setName("Fun"));
+        javaslang.collection.List<Tag> tags = javaslang.collection.List.of(new Tag().setName("Discovery"), new Tag().setName("Fun"));
         PageRequest pageRequest = new PageRequest(1, 3, Sort.Direction.fromString("DESC"), "title");
         PageImpl<Item> pageResponse = new PageImpl<>(new ArrayList<>());
 
@@ -245,7 +245,7 @@ public class ItemBusinessTest {
     @Test
     public void should_find_by_tags() {
         /* Given */
-        List<Tag> tags = Arrays.asList(new Tag().setName("Discovery"), new Tag().setName("Fun"));
+        javaslang.collection.List<Tag> tags = javaslang.collection.List.of(new Tag().setName("Discovery"), new Tag().setName("Fun"));
         PageRequest pageRequest = new PageRequest(1, 3, Sort.Direction.fromString("DESC"), "title");
         PageImpl<Item> pageResponse = new PageImpl<>(new ArrayList<>());
 
@@ -263,7 +263,7 @@ public class ItemBusinessTest {
     public void should_find_by_tags_and_full_text_with_pertinence_order_asc() {
         /* Given */
         String term = "Foo";
-        List<Tag> tags = Arrays.asList(new Tag().setName("Discovery"), new Tag().setName("Fun"));
+        javaslang.collection.List<Tag> tags = javaslang.collection.List.of(new Tag().setName("Discovery"), new Tag().setName("Fun"));
         PageRequest pageRequest = new PageRequest(1, 3, Sort.Direction.fromString("ASC"), "pertinence");
         List<Item> itemsFrom1To20 = IntStream.range(1, 20)
                 .mapToObj(id -> new Item().setId(UUID.randomUUID()))
